// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> AltinnIconButton--- Snapshot +++ Should match snapshot with all params specified 1`] = `
<button
  className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-raised-17 AltinnIconButton-dottedBtn-1"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-4"
  >
    <i
      className="ai ai-write AltinnIconButton-dottedBtnIcon-2"
    />
    mock btn text
  </span>
  <span
    className="MuiTouchRipple-root-32"
  />
</button>
`;

exports[`>>> AltinnIconButton--- Snapshot +++ Should match snapshot with the least amount of params 1`] = `
<button
  className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-raised-17 AltinnIconButton-dottedBtn-1"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-4"
  >
    <i
      className="ai ai-write AltinnIconButton-dottedBtnIcon-2"
    />
    mock btn text
  </span>
  <span
    className="MuiTouchRipple-root-32"
  />
</button>
`;
